--- a/css/blocks/vacancy.css
+++ b/css/blocks/vacancy.css
@@ -1,10 +1,10 @@
 .vacancy {
 	padding-top: 40px;
-	padding-bottom: 120px;
+	padding-bottom: 117px;
 }
 
 .vacancy__top {
-	margin-bottom: 40px;
+	padding-bottom: 40px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -116,6 +116,7 @@
 
 .vacancy__name {
 	margin: 0;
+	font-weight: 300;
 	font-size: 20px;
 	line-height: 120%;
 	text-transform: uppercase;
